--- a/src/components/Lottery.css
+++ b/src/components/Lottery.css
@@ -1,5 +1,6 @@
-.Header {
+.Lottery {
     text-align: center;
+    color: #fbcbaa;
   /*  min-height: 100vh;*/
     display: flex;
     flex-direction: column;
