--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
-  text-align: center;
-  background-color: black;
+ /* text-align: center; 
+ display: flex;
+   /* flex-direction: row;
+    align-items: left;
+    justify-content: left;*/
+  background-color: #491212;
+  color: #c2442b;
 }
 
 .App-logo {
@@ -15,16 +20,27 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: #4d1300;  /*#282c34;  */
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.App-wrapper{
+  display:grid;
+  grid-template-columns: 15% 30% 55%;
+  background:#491212;
+  padding:1em;
+}
+.App-button{
+  background-color: #491212;
+  color: #c2442b;
+}
+
+.App-input{
+  background-color: #220404;
+  color: #fbcbaa;
 }
