--- a/src/components/TitleBar.css
+++ b/src/components/TitleBar.css
@@ -1,9 +1,8 @@
-.Header {
+.TitleBar {
     text-align: center;
   /*  min-height: 100vh;*/
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #491212;
 }
