--- a/src/components/Lottery.css
+++ b/src/components/Lottery.css
@@ -1,10 +1,7 @@
 .Lottery {
-    text-align: center;
-    color: #fbcbaa;
   /*  min-height: 100vh;*/
-    display: flex;
+   /* display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;*/
     justify-content: center;
-    background-color: #491212;
 }
